[package]
name = "angelcake"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "A tasty way to execute build tasks."
homepage = "https://github.com/iamtheblackunicorn/angelcake"
repository = "https://github.com/iamtheblackunicorn/angelcake"
documentation = "https://github.com/iamtheblackunicorn/angelcake"
readme = "README.markdown"
keywords = [
  "task",
  "build"
]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::cargo-plugins",
  "development-tools::build-utils",
  "development-tools::testing"
]
exclude = [
  "/.github"
]

[dependencies]
cleasy = "1.0.0"
colored = "2.0.0"
angelmarkup = "1.1.0"
